[package]
name = "tpw"
version = "0.1.0"
edition = "2021"
license = "MIT"
license-file = "LICENSE"
documentation = "https://docs.rs/tpw"
repository = "https://github.com/lzt1008/tpw"
homepage = "https://github.com/lzt1008/tpw"

[dependencies]
clap = { version = "4.5.9", features = ["derive", "string"] }
core-foundation = "0.10.0"
itertools = "0.13.0"
ratatui = "0.29.0"
scopefn = { version = "0.0.2", features = ["run_if"] }
